[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/char/foxy/566.png" type="Texture" id=1]
[ext_resource path="res://sprites/char/foxy/596.png" type="Texture" id=2]
[ext_resource path="res://sprites/char/foxy/594.png" type="Texture" id=3]
[ext_resource path="res://sprites/char/foxy/565.png" type="Texture" id=4]
[ext_resource path="res://sprites/char/foxy/59a.png" type="Texture" id=5]
[ext_resource path="res://objects/chars/foxy/foxyai.gd" type="Script" id=6]
[ext_resource path="res://sprites/char/foxy/5a0.png" type="Texture" id=7]
[ext_resource path="res://sprites/office/room/717.png" type="Texture" id=8]
[ext_resource path="res://sprites/char/foxy/5bb.png" type="Texture" id=9]
[ext_resource path="res://sprites/char/foxy/5b8.png" type="Texture" id=10]
[ext_resource path="res://sprites/char/foxy/5b9.png" type="Texture" id=11]
[ext_resource path="res://sprites/char/foxy/5ba.png" type="Texture" id=12]
[ext_resource path="res://sprites/char/foxy/5bd.png" type="Texture" id=13]
[ext_resource path="res://audio/char/foxy/Pirate Song2.mp3" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 183.5, 171.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("officeFoxy/foxylegs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -831, 775 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("officeFoxy/5B9:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1159, 820 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("officeFoxy/5B8:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -290, 807 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("officeFoxy/5Ba:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 109, 731 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("officeFoxy/5Bd:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 626, 754 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "office"
length = 26.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("officeFoxy/foxylegs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1148, 809 ), Vector2( -1148, 809 ), Vector2( -676, 254 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("officeFoxy/5B9:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -850, 758 ), Vector2( -850, 758 ), Vector2( -732, 443 ), Vector2( -732, 443 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("officeFoxy/5B8:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -350, 780 ), Vector2( -350, 780 ), Vector2( 660, 437 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("officeFoxy/5Ba:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 767 ), Vector2( 6, 767 ), Vector2( 749, 379 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("officeFoxy/5Bd:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 607, 745 ), Vector2( 607, 745 ), Vector2( -51, 270 ) ]
}

[node name="foxy" type="Node2D"]
script = ExtResource( 6 )

[node name="camFoxy" type="Node2D" parent="."]
z_index = 7
z_as_relative = false

[node name="singing" type="AudioStreamPlayer2D" parent="camFoxy"]
stream = ExtResource( 14 )

[node name="piratesCove" type="AnimatedSprite" parent="camFoxy"]
z_index = 7
frames = SubResource( 1 )

[node name="detectCamera" type="Area2D" parent="camFoxy"]

[node name="hitbox" type="CollisionShape2D" parent="camFoxy/detectCamera"]
shape = SubResource( 2 )

[node name="officeFoxy" type="Node2D" parent="."]
z_index = 2

[node name="background" type="Sprite" parent="officeFoxy"]
visible = false
texture = ExtResource( 8 )

[node name="foxylegs" type="Sprite" parent="officeFoxy"]
position = Vector2( -831, 775 )
z_index = 1
texture = ExtResource( 9 )

[node name="5B8" type="Sprite" parent="officeFoxy"]
position = Vector2( -290, 807 )
texture = ExtResource( 10 )

[node name="5B9" type="Sprite" parent="officeFoxy"]
position = Vector2( -1159, 820 )
texture = ExtResource( 11 )

[node name="5Ba" type="Sprite" parent="officeFoxy"]
position = Vector2( 109, 731 )
texture = ExtResource( 12 )

[node name="5Bd" type="Sprite" parent="officeFoxy"]
position = Vector2( 626, 754 )
z_index = 1
texture = ExtResource( 13 )

[node name="camAnimation" type="AnimationPlayer" parent="."]

[node name="officeAnimation" type="AnimationPlayer" parent="."]
playback_speed = 0.0
anims/RESET = SubResource( 3 )
anims/office = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 3, 3 )

[node name="waitTillSing" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[connection signal="area_entered" from="camFoxy/detectCamera" to="." method="_on_detectCamera_area_entered"]
[connection signal="area_exited" from="camFoxy/detectCamera" to="." method="_on_detectCamera_area_exited"]
[connection signal="timeout" from="waitTillSing" to="." method="_on_waitTillSing_timeout"]
